--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             </section>
         </main>
         <footer>
-
+            <p>©️ <span id="currentyear"></span> Alfonso Habana Rosales, Mexico, Mexico</p>
+            <p id="lastModified"></p>
         </footer>
     </Body>
 </html>
