--- a/index.html
+++ b/index.html
@@ -6,19 +6,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="WDD 131 - Fundamentos Web Dinámicos,I'm Alfonso Hababa Rosales, I stuidy in BYU, this page is my practice to learn HTML,CSS and Javascripts code.">
         <meta name="author" content="Alfonso Habana Rosales">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <Body>
         <header>
-            <h1>WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</h1>
+            <h1 class="box1">WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</h1>
             <nav>
-                <a href="linkedin.com">LinkedIn</a>
-                <a href="https://byupw.instructure.com/">Canvas</a>
-                <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a>
-                <a href="#">Final Project</a>
+                <ul>
+                    <li><a class="nosubraya" href="linkedin.com">LinkedIn</a></li>
+                    <li><a class="nosubraya" href="https://byupw.instructure.com/">Canvas</a></li>
+                    <li><a class ="nosubraya" href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a></li>
+                    <li><a class="nosubraya" href="#">Final Project</a></li>
+                </ul>
             </nav>
         </header>
         <main>
             <section class="card">
+                <h1 class="box1">about Me</h1>
+                <img src="images/profile.jpg" alt="Hello, I am Alfonso Habana Rosales" width="200">
+                <p>Hello, I am Alfonso Habana Rosales.</p>
+                <p>I am from Mexico, Mexico. I love learning, I also like painting, singing, dancing. But what I love the most is to talk, maybe writing I'm not very good at it, but I love talking.</p>
+                <p> This is my first document. I hope it upload well</p>
 
             </section>
             <section class="card">
