--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <Body>
         <header>
             <h1 class="box1">WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</h1>
-            <nav>
+            <nav class="nosubraya">
                 <ul>
-                    <li><a class="nosubraya" href="linkedin.com">LinkedIn</a></li>
-                    <li><a class="nosubraya" href="https://byupw.instructure.com/">Canvas</a></li>
-                    <li><a class ="nosubraya" href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a></li>
-                    <li><a class="nosubraya" href="#">Final Project</a></li>
+                    <li><a href="linkedin.com">LinkedIn</a></li>
+                    <li><a href="https://byupw.instructure.com/">Canvas</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a></li>
+                    <li><a href="#">Final Project</a></li>
                 </ul>
             </nav>
         </header>
