--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="WDD 131 - Fundamentos Web Dinámicos,I'm Alfonso Hababa Rosales, I stuidy in BYU, this page is my practice to learn HTML,CSS and Javascripts code.">
         <meta name="author" content="Alfonso Habana Rosales">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/base.css">
     </head>
     <Body>
         <header>
