--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en-US">
     <head>
+        <script src="getdate.js" defer></script>
         <title>WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="WDD 131 - Fundamentos Web Dinámicos,I'm Alfonso Hababa Rosales, I stuidy in BYU, this page is my practice to learn HTML,CSS and Javascripts code.">
         <meta name="author" content="Alfonso Habana Rosales">
         <link rel="stylesheet" href="styles/base.css">
+
     </head>
     <Body>
         <header>
