--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             </section>
         </main>
         <footer>
-            <p>©️ <span id="currentyear"></span> Alfonso Habana Rosales, Mexico, Mexico</p>
+            <p>©️ <span id="currentyear"></span></p>
+            <p>Alfonso Habana Rosales, Mexico, Mexico</p>
             <p id="lastModified"></p>
         </footer>
     </Body>
