--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             </section>
         </main>
         <footer>
-            <p>©️ <span id="currentyear"></span></p>
+            <p>©️ <span id="currentYear"></span></p>
             <p>Alfonso Habana Rosales, Mexico, Mexico</p>
-            <p id="lastModified"></p>
+            <p><span id="lastModified"></span></p>
         </footer>
     </Body>
 </html>
