--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
             <section class="card">
                 <h1 class="box1">about Me</h1>
                 <img src="images/profile.jpg" alt="Hello, I am Alfonso Habana Rosales" width="200">
-                <p>Hello, I am Alfonso Habana Rosales.</p>
-                <p>I am from Mexico, Mexico. I love learning, I also like painting, singing, dancing. But what I love the most is to talk, maybe writing I'm not very good at it, but I love talking.</p>
-                <p> This is my first document. I hope it upload well</p>
-
+                <p>Hello, I am Alfonso Habana Rosales. I am from Mexico, Mexico. I love learning, I also like painting, singing, dancing. But what I love the most is to talk, maybe writing I'm not very good at it, but I love talking. This is my first document. I hope it upload well</p>
+                <img src="images/mx.jpg" alt="">
             </section>
             <section class="card">
 
