--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
         </header>
         <main>
             <section class="card">
-                <h1 class="box1">about Me</h1>
-                <img  class="rigth" src="images/profile.jpg" alt="Hello, I am Alfonso Habana Rosales" width="200">
-                <p>Hello, I am Alfonso Habana Rosales. I am from Mexico, Mexico. I love learning, I also like painting, singing, dancing. But what I love the most is to talk, maybe writing I'm not very good at it, but I love talking. This is my first document. I hope it upload well</p>
+                <h1 class="box1">About Me</h1>
+                <aside>
+                    <img  class="rigth" src="images/profile.jpg" alt="Hello, I am Alfonso Habana Rosales" width="200">
+                    <p class="left">Hello, I am Alfonso Habana Rosales. I am from Mexico, Mexico. I love learning, I also like painting, singing, dancing. But what I love the most is to talk, maybe writing I'm not very good at it, but I love talking. This is my first document. I hope it upload well</p>
+                </aside>
                 <h2>Mexico, Mexico</h2>
                 <aside class="linea">
                     <img class="left" src="images/mx.jpg" alt="Official Mexico Flag" width="200">
-                    <p>Mexico, officially the United Mexican States, is a country in the southern portion of North America. Covering 1,972,550 km², it is the world's 13th largest country by area; with a population of over 130 million, it is the 10th most populous country and has the most Spanish speakers in the world.</p>
+                    <p class="rigth">Mexico, officially the United Mexican States, is a country in the southern portion of North America. Covering 1,972,550 km², it is the world's 13th largest country by area; with a population of over 130 million, it is the 10th most populous country and has the most Spanish speakers in the world.</p>
                 </aside>
             </section>
             <section class="card">
