--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
     <head>
-        <script src="getdate.js" defer></script>
+        <script src="getdates.js" defer></script>
         <title>WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,6 +36,7 @@
                 </aside>
             </section>
             <section class="card">
+
 
             </section>
         </main>
