--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
     <head>
-        <script src="getdates.js" defer></script>
+        <script src="scrip/getdates.js" defer></script>
         <title>WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
