--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
     <head>
-        <script src="scrip/getdates.js" defer></script>
+        <script src="scripts/getdates.js" defer></script>
         <title>WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,19 +23,28 @@
             </nav>
         </header>
         <main>
-            <section class="card">
+            <section class="card, left">
                 <h1 class="box1">About Me</h1>
                 <aside>
-                    <img  class="rigth" src="images/profile.jpg" alt="Hello, I am Alfonso Habana Rosales" width="200">
-                    <p class="left">Hello, I am Alfonso Habana Rosales. I am from Mexico, Mexico. I love learning, I also like painting, singing, dancing. But what I love the most is to talk, maybe writing I'm not very good at it, but I love talking. This is my first document. I hope it upload well</p>
+                    <img  class="imgrigth" src="images/profile.jpg" alt="Hello, I am Alfonso Habana Rosales" width="200">
+                    <p class="txleft">Hello, I am Alfonso Habana Rosales. I am from Mexico, Mexico. I love learning, I also like painting, singing, dancing. But what I love the most is to talk, maybe writing I'm not very good at it, but I love talking. This is my first document. I hope it upload well</p>
                 </aside>
                 <h2>Mexico, Mexico</h2>
                 <aside class="linea">
-                    <img class="left" src="images/mx.jpg" alt="Official Mexico Flag" width="200">
-                    <p class="rigth">Mexico, officially the United Mexican States, is a country in the southern portion of North America. Covering 1,972,550 km², it is the world's 13th largest country by area; with a population of over 130 million, it is the 10th most populous country and has the most Spanish speakers in the world.</p>
+                    <img class="imgleft" src="images/mx.jpg" alt="Official Mexico Flag" width="200">
+                    <p class="txrigth">Mexico, officially the United Mexican States, is a country in the southern portion of North America. Covering 1,972,550 km², it is the world's 13th largest country by area; with a population of over 130 million, it is the 10th most populous country and has the most Spanish speakers in the world.</p>
                 </aside>
             </section>
-            <section class="card">
+            <section class="card, rigth">
+                <h1 class="box1">Web Dev Resorces</h1>
+                <ul>
+                    <li><a href="#">Dev.to Community</a></li>
+                    <li><a href="#">Smashing Magazine</a></li>
+                    <li><a href="#">CSS Tricks</a></li>
+                    <li><a href="#">W3 Schools</a></li>
+                    <li><a href="#">Udemy</a></li>
+                    <li><a href="#">Image Placeholder</a></li>
+                </ul>
 
 
             </section>
