--- a/place.html
+++ b/place.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
     <head>
-        <script src="getdate.js" defer></script>
+        <script src="scripts/getdates.js" defer></script>
         <title>WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +19,9 @@
 
         </main>
         <footer>
-            
+            <p>©️ <span id="currentYear"></span></p>
+            <p>Alfonso Habana Rosales, Mexico, Mexico</p>
+            <p><span id="lastModified"></span></p>
         </footer>
 
     </body>
