--- a/place.html
+++ b/place.html
@@ -16,6 +16,11 @@
 
         </header>
         <main>
+            <div class="contenenedor">
+                <img class="flota" src="arequipa.jpg" alt="Arequipa,Peru">
+                
+
+            </div>
 
         </main>
         <footer>
