--- a/place.html
+++ b/place.html
@@ -13,11 +13,11 @@
     <body>
         
         <header>
-
+            <h1>Arequipa, Peru</h1>
         </header>
         <main>
             <div class="contenenedor">
-                <img class="flota" src="arequipa.jpg" alt="Arequipa,Peru">
+                <img class="flota" src="images/arequipa.jpg" alt="Arequipa,Peru">
                 <section>
                     <h2>Data</h2>
                     <ul>
@@ -31,6 +31,15 @@
                     </ul> 
                 </section>
 
+                <section>
+                    <h2>Weather</h2>
+                    <ul>
+                        <li><b>Temperature</b>17°C°F</li>
+                        <li><b>Precipitation:</b> 25%</li>
+                        <li><b>Humidity:</b> 72%</li>
+                        <li><b>Wind:</b> 8 km/h</li>
+                    </ul>
+                </section>
 
             </div>
 
