--- a/temples.html
+++ b/temples.html
@@ -28,15 +28,15 @@
             <h2> Home</h2>
             <div class="galeria">
 
-                <img src="templo1.png" alt="">
-                <img src="templo2.png" alt="">
-                <img src="templo3.png" alt="">
-                <img src="templo4.png" alt="">
-                <img src="templo5.png" alt="">
-                <img src="templo6.png" alt="">
-                <img src="templo7.png" alt="">
-                <img src="templo8.png" alt="">
-                <img src="templo9.png" alt="">
+                <img src="templo1.jpeg" alt="Aba Nigeria Temple">
+                <img src="templo2.jpeg" alt="Albuquerque New Mexico Temple">
+                <img src="templo3.jpeg" alt="Mexico City Mexico Temple">
+                <img src="templo4.jpeg" alt="Arequipa Peru Temple">
+                <img src="templo5.jpeg" alt="">
+                <img src="templo6.jpeg" alt="">
+                <img src="templo7.jpeg" alt="">
+                <img src="templo8.jpeg" alt="">
+                <img src="templo9.jpeg" alt="">
 
 
             </div>
