--- a/temples.html
+++ b/temples.html
@@ -16,11 +16,11 @@
             <h1>Temple Album</h1>
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Old</a></li>
-                    <li><a href="">New</a></li>
-                    <li><a href="">Large</a></li>
-                    <li><a href="">Small</a></li>
+                    <li><a href="https://alfonsohr6.github.io/wdd131/temples.html">Home</a></li>
+                    <li><a href="https://alfonsohr6.github.io/wdd131/temples.html">Old</a></li>
+                    <li><a href="https://alfonsohr6.github.io/wdd131/temples.html">New</a></li>
+                    <li><a href="https://alfonsohr6.github.io/wdd131/temples.html">Large</a></li>
+                    <li><a href="https://alfonsohr6.github.io/wdd131/temples.html">Small</a></li>
                 </ul>
             </nav>
         </header>
@@ -28,15 +28,15 @@
             <h2> Home</h2>
             <div class="galeria">
 
-                <img src="templo1.jpg" alt="Aba Nigeria Temple">
-                <img src="templo2.jpg" alt="Albuquerque New Mexico Temple">
-                <img src="templo3.jpg" alt="Mexico City Mexico Temple">
-                <img src="templo4.jpg" alt="Arequipa Peru Temple">
-                <img src="templo5.jpg" alt="">
-                <img src="templo6.jpg" alt="">
-                <img src="templo7.jpg" alt="">
-                <img src="templo8.jpg" alt="">
-                <img src="templo9.jpg" alt="">
+                <img src="images/templo1.jpg" alt="Aba Nigeria Temple">
+                <img src="images/templo2.jpg" alt="Albuquerque New Mexico Temple">
+                <img src="images/templo3.jpg" alt="Mexico City Mexico Temple">
+                <img src="images/templo4.jpg" alt="Arequipa Peru Temple">
+                <img src="images/templo5.jpg" alt="">
+                <img src="images/templo6.jpg" alt="">
+                <img src="images/templo7.jpg" alt="">
+                <img src="images/templo8.jpg" alt="">
+                <img src="images/templo9.jpg" alt="">
 
 
             </div>
