--- a/temples.html
+++ b/temples.html
@@ -32,11 +32,11 @@
                 <img src="images/templo2.jpg" alt="Albuquerque New Mexico Temple">
                 <img src="images/templo3.jpg" alt="Mexico City Mexico Temple">
                 <img src="images/templo4.jpg" alt="Arequipa Peru Temple">
-                <img src="images/templo5.jpg" alt="">
-                <img src="images/templo6.jpg" alt="">
-                <img src="images/templo7.jpg" alt="">
-                <img src="images/templo8.jpg" alt="">
-                <img src="images/templo9.jpg" alt="">
+                <img src="images/templo5.jpg" alt="Lima Peru Temple">
+                <img src="images/templo6.jpg" alt="Oaxaca Mexico Temple">
+                <img src="images/templo7.jpg" alt="Kirtland Ohio Temple">
+                <img src="images/templo8.jpg" alt="Logan Utah Temple">
+                <img src="images/templo9.jpg" alt="Trujillo Peru Temple">
 
 
             </div>
