--- a/temples.html
+++ b/temples.html
@@ -28,15 +28,15 @@
             <h2> Home</h2>
             <div class="galeria">
 
-                <img src="images/templo1.jpg" alt="Aba Nigeria Temple">
-                <img src="images/templo2.jpg" alt="Albuquerque New Mexico Temple">
-                <img src="images/templo3.jpg" alt="Mexico City Mexico Temple">
-                <img src="images/templo4.jpg" alt="Arequipa Peru Temple">
-                <img src="images/templo5.jpg" alt="Lima Peru Temple">
-                <img src="images/templo6.jpg" alt="Oaxaca Mexico Temple">
-                <img src="images/templo7.jpg" alt="Kirtland Ohio Temple">
-                <img src="images/templo8.jpg" alt="Logan Utah Temple">
-                <img src="images/templo9.jpg" alt="Trujillo Peru Temple">
+                <figure><img src="images/templo1.jpg" alt="Aba Nigeria Temple"><figcaption>Aba Nigeria Temple</figcaption></figure>
+                <figure><img src="images/templo2.jpg" alt="Albuquerque New Mexico Temple"><figcaption>Albuquerque New Mexico Temple</figcaption></figure>
+                <figure><img src="images/templo3.jpg" alt="Mexico City Mexico Temple"><figcaption>Mexico City Mexico Temple</figcaption></figure>
+                <figure><img src="images/templo4.jpg" alt="Arequipa Peru Temple"><figcaption>Arequipa Peru Temple</figcaption></figure>
+                <figure><img src="images/templo5.jpg" alt="Lima Peru Temple"><figcaption>Lima Peru Temple</figcaption></figure>
+                <figure><img src="images/templo6.jpg" alt="Oaxaca Mexico Temple"><figcaption>Oaxaca Mexico Temple</figcaption></figure>
+                <figure><img src="images/templo7.jpg" alt="Kirtland Ohio Temple"><figcaption>Kirtland Ohio Temple</figcaption></figure>
+                <figure><img src="images/templo8.jpg" alt="Logan Utah Temple"><figcaption>Logan Utah Temple</figcaption></figure>
+                <figure><img src="images/templo9.jpg" alt="Trujillo Peru Temple"><figcaption>Trujillo Peru Temple</figcaption></figure>
 
 
             </div>
