--- a/place.html
+++ b/place.html
@@ -11,41 +11,34 @@
 
     </head>
     <body>
-        
         <header>
             <h1>Arequipa, Peru</h1>
         </header>
         <main>
             <div class="contenenedor">
-                <img class="flota" src="images/arequipa.jpg" alt="Arequipa,Peru">
-                <section>
+                <img class="imagen-fondo" src="images/arequipa.jpg" alt="Arequipa, Peru">
+                <section class="seccion-izquierda">
                     <h2>Data</h2>
                     <ul>
                         <li><b>Elevation:</b> 2,335 m </li>
                         <li><b>Provincial Mayor:</b> Víctor Hugo Rivera</li>
-                        <li><b>Metropolitan Area:</b> Metropolitan Arequipa</li>
-                        <li><b>Climate:</b> <a href="https://www.google.com/search?sca_esv=0977071d80298f47&rlz=1C1CHZL_esMX801MX802&sxsrf=AHTn8zoA6mjMm4LGkLpecl-5yd4n2vwUEA:1737843772518&q=BWk&stick=H4sIAAAAAAAAAONgVuLVT9c3NMwwSSqzqDBNWcTK7BSeDQBZNfvVFwAAAA&sa=X&ved=2ahUKEwjMwvHF9JGLAxUhHkQIHVC8HAAQmxMoAXoECBkQAw&cshid=1737843798837562">Arid temperate BWk</a></li>
-                        <li><b>Coordinates:</b> <a href="https://maps.app.goo.gl/r9iwzgTQHPiS2VjN9"> 16°23′56″S 71°32′13″W / -16.398763888889, -71.536883333333</a></li>
-                        <li><b>Entity:</b> City</li>
-                        <li><b>Citizenship:</b> Arequipeño, -ña</li>
-                    </ul> 
+                        <!-- Más datos aquí -->
+                    </ul>
                 </section>
-                <section>
+                <section class="seccion-derecha">
                     <h2>Weather</h2>
                     <ul>
-                        <li><b>Temperature</b>17°C°F</li>
+                        <li><b>Temperature:</b> 17°C</li>
                         <li><b>Precipitation:</b> 25%</li>
-                        <li><b>Humidity:</b> 72%</li>
-                        <li><b>Wind:</b> 8 km/h</li>
+                        <!-- Más datos aquí -->
                     </ul>
                 </section>
             </div>
-
         </main>
         <footer>
             <p>©️ <span id="currentYear"></span></p>
             <p>Alfonso Habana Rosales, Mexico, Mexico</p>
             <p><span id="lastModified"></span></p>
         </footer>
-
     </body>
+</html>
