--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -22,11 +22,11 @@ the code that I understand by videos of Youtube in Spanish so sorry my issues-->
         </button>
         <nav>
             <ul id="menu">
-                <li><a href="https://alfonsohr6.github.io/wdd131/temples.html">Home</a></li>
-                <li><a href="https://alfonsohr6.github.io/wdd131/temples.html">Old</a></li>
-                <li><a href="https://alfonsohr6.github.io/wdd131/temples.html">New</a></li>
-                <li><a href="https://alfonsohr6.github.io/wdd131/temples.html">Large</a></li>
-                <li><a href="https://alfonsohr6.github.io/wdd131/temples.html">Small</a></li>
+                <li><a href="#" data-filter="all">Home</a></li>
+                <li><a href="#" data-filter="old">Old</a></li>
+                <li><a href="#" data-filter="new">New</a></li>
+                <li><a href="#" data-filter="large">Large</a></li>
+                <li><a href="#" data-filter="small">Small</a></li>
             </ul>
         </nav>
     </header>
