--- a/form.html
+++ b/form.html
@@ -1,3 +1,7 @@
+<!--So sorry the a lot comments but I need to know what myself was thinking to do this parts and 
+understand better my code and so sorry that I type that in Spanish but I need understand me, I use and apply
+the code that I understand by videos of Youtube in Spanish so sorry my issues-->
+
 <!doctype html>
 <html lang="en-US">
 <head>
