--- a/form.html
+++ b/form.html
@@ -31,7 +31,10 @@ the code that I understand by videos of Youtube in Spanish so sorry my issues-->
             <!-- Calificación general -->
             <div>
                 <label>Overall Rating:</label>
-                <div>
+               <!-- Calificación general -->
+            <div>
+                <label>Overall Rating:</label>
+                <div class="radio-group">
                     <input type="radio" id="rating1" name="rating" value="1" required>
                     <label for="rating1">1</label>
                     <input type="radio" id="rating2" name="rating" value="2">
