--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -22,7 +22,14 @@
             </nav>
         </header>
         <main>
+            <img src="images/barrio.jpg" alt="Barrio Zumpango" class="imagen-fondo">
+            <section class="contenenedor">
 
+            </section>
+            <section class="contenenedor">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.499815069455!2d-99.133208!3d19.828893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1e2b8c8f7b8b7%3A0x7b1e5c8e8c8f7b8b!2sZumpango%2C%20M%C3%A9x.!5e0!3m2!1sen!2smx!4v1698765432109!5m2!1sen!2smx"></iframe>
+                <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.499815069455!2d-99.133208!3d19.828893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1e2b8c8f7b8b7%3A0x7b1e5c8e8c8f7b8b!2sZumpango%2C%20M%C3%A9x.!5e0!3m2!1sen!2smx!4v1698765432109!5m2!1sen!2smx"><p class="nos">RW87+JR, 55600 Zumpango de Ocampo, Méx.</p></a>
+            </section>
         </main>
         <footer>
             <p>©️ <span id="currentYear"></span></p>
