--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -1,40 +1,43 @@
 <!doctype html>
 <html lang="en-US">
-    <head>
-        <script src="scripts/getdates.js" defer></script>
-        <title>WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="WDD 131 - Fundamentos Web Dinámicos,I'm Alfonso Hababa Rosales, I stuidy in BYU, this page is my practice to learn HTML,CSS and Javascripts code.">
-        <meta name="author" content="Alfonso Habana Rosales">
-        <link rel="stylesheet" href="styles/base.css">
-
-    </head>
-    <body>
-        <header>
-            <h1><a href="#">Zumpango</a></h1>
-            <nav>
-                <ul>
-                    <li><a href="">Activity</a></li>
-                    <li><a href="">Library</a></li>
-                    <li><a href="">Help</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
+<head>
+    <script src="scripts/siteplan.js" defer></script>
+    <title>WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="WDD 131 - Fundamentos Web Dinámicos, I'm Alfonso Hababa Rosales, I study in BYU, this page is my practice to learn HTML, CSS and Javascripts code.">
+    <meta name="author" content="Alfonso Habana Rosales">
+    <link rel="stylesheet" href="style/siteplan.css">
+</head>
+<body>
+    <header>
+        <h1><a href="#">Zumpango</a></h1>
+        <!-- Botón de menú desplegable -->
+        <button id="menuToggle" class="menu-button">☰ Menu</button>
+        <nav>
+            <ul id="navMenu">
+                <li><a href="">Activity</a></li>
+                <li><a href="">Library</a></li>
+                <li><a href="">Help</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="contenedor">
             <img src="images/barrio.jpg" alt="Barrio Zumpango" class="imagen-fondo">
-            <section class="contenenedor">
-
+            <section class="seccion-izquierda">
+                <p>Come join us at the chapel we meet every Sunday at 9 am.</p>
             </section>
-            <section class="contenenedor">
+            <section class="seccion-derecha">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.499815069455!2d-99.133208!3d19.828893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1e2b8c8f7b8b7%3A0x7b1e5c8e8c8f7b8b!2sZumpango%2C%20M%C3%A9x.!5e0!3m2!1sen!2smx!4v1698765432109!5m2!1sen!2smx"></iframe>
                 <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.499815069455!2d-99.133208!3d19.828893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1e2b8c8f7b8b7%3A0x7b1e5c8e8c8f7b8b!2sZumpango%2C%20M%C3%A9x.!5e0!3m2!1sen!2smx!4v1698765432109!5m2!1sen!2smx"><p class="nos">RW87+JR, 55600 Zumpango de Ocampo, Méx.</p></a>
             </section>
-        </main>
-        <footer>
-            <p>©️ <span id="currentYear"></span></p>
-            <p>Barrio Zumpango, Pagina NO OFICIAL</p>
-            <p><span id="lastModified"></span></p>
-        </footer>
-    </body>
+        </div>
+    </main>
+    <footer>
+        <p>©️ <span id="currentYear"></span></p>
+        <p>Barrio Zumpango, Pagina NO OFICIAL</p>
+        <p><span id="lastModified"></span></p>
+    </footer>
+</body>
 </html>
