--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -12,13 +12,11 @@
 <body>
     <header>
         <h1><a href="#">Zumpango</a></h1>
-        <!-- Botón de menú desplegable -->
-        <button id="menuToggle" class="menu-button">☰ Menu</button>
         <nav>
             <ul id="navMenu">
-                <li><a href="">Activity</a></li>
-                <li><a href="">Library</a></li>
-                <li><a href="">Help</a></li>
+                <li><a href="#">Activity</a></li>
+                <li><a href="#">Library</a></li>
+                <li><a href="#">Help</a></li>
             </ul>
         </nav>
     </header>
