--- a/project/help.html
+++ b/project/help.html
@@ -2,16 +2,17 @@
 <html lang="en-US">
 <head>
     <script src="scripts/siteplan.js" defer></script>
-    <title>WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</title>
+    <title>Help and Contacts - Zumpango</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="WDD 131 - Fundamentos Web Dinámicos, I'm Alfonso Hababa Rosales, I study in BYU, this page is my practice to learn HTML, CSS and Javascripts code.">
+    <meta name="description" content="Contact information for assistance in the Zumpango community.">
     <meta name="author" content="Alfonso Habana Rosales">
     <link rel="stylesheet" href="style/siteplan.css">
 </head>
 <body>
     <header>
         <h1><a href="siteplan.html">Zumpango</a></h1>
+        <button id="menuToggle" class="menu-button">☰ Menu</button>
         <nav>
             <ul id="navMenu">
                 <li><a href="activity.html">Activity</a></li>
@@ -22,13 +23,17 @@
     </header>
     <main>
         <div class="contenedor">
-            <img src="images/barrio.jpg" alt="Barrio Zumpango" class="imagen-fondo">
             <section class="seccion-izquierda">
-                <p>Come join us at the chapel we meet every Sunday at 9 am.</p>
+                <h2>Contact Us</h2>
+                <p>For any questions or assistance, you can reach us through the following channels:</p>
             </section>
             <section class="seccion-derecha">
-                <div id="map"></div>
-                <a href="https://maps.app.goo.gl/HRVJtSiynUPMdddMA"><p class="nos">55600 Zumpango de Ocampo, Méx.</p></a>
+                <ul class="contact-info">
+                    <li><a href="https://www.facebook.com/zumpango" target="_blank">Facebook</a></li>
+                    <li><a href="https://wa.me/1234567890" target="_blank">WhatsApp</a></li>
+                    <li><a href="https://www.instagram.com/zumpango" target="_blank">Instagram</a></li>
+                    <li><a href="mailto:info@zumpango.org">Email</a></li>
+                </ul>
             </section>
         </div>
     </main>
