--- a/project/activity.html
+++ b/project/activity.html
@@ -23,16 +23,14 @@
     </header>
     <main>
         <div class="contenedor">
-            <section class="seccion-izquierda">
-                <h2>Galería de Actividades</h2>
-                <p>Filtra las actividades por categoría:</p>
-                <div class="filters">
-                    <button class="filter-button" data-category="all">All</button>
-                    <button class="filter-button" data-category="community">Community</button>
-                    <button class="filter-button" data-category="sports">Sports</button>
-                </div>
-            </section>
-            <section class="seccion-derecha">
+            <!-- Filtros minimalistas -->
+            <div class="filter-bar">
+                <button class="filter-button" data-category="all">All</button>
+                <button class="filter-button" data-category="community">Community</button>
+                <button class="filter-button" data-category="sports">Sports</button>
+            </div>
+            <!-- Galería de actividades -->
+            <section class="gallery-section">
                 <div class="gallery">
                     <div class="gallery-item" data-category="community">
                         <img src="images/activity1.jpg" alt="Community Service">
