--- a/project/library.html
+++ b/project/library.html
@@ -23,38 +23,39 @@
     </header>
     <main>
         <div class="contenedor">
-            <section class="seccion-izquierda">
+            <section class="seccion-centrada">
                 <h2>Inventario de la Biblioteca</h2>
                 <p>Busca libros por título, autor o categoría:</p>
-                <input type="text" id="searchInput" placeholder="Search books...">
-            </section>
-            <section class="seccion-derecha">
+                <div class="search-container">
+                    <input type="text" id="searchInput" placeholder="Buscar libros...">
+                    <button class="search-button">🔍</button>
+                </div>
                 <table>
                     <thead>
                         <tr>
-                            <th>Title</th>
-                            <th>Author</th>
-                            <th>Category</th>
-                            <th>Quantity</th>
+                            <th>Título</th>
+                            <th>Autor</th>
+                            <th>Categoría</th>
+                            <th>Cantidad</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>The Great Gatsby</td>
                             <td>F. Scott Fitzgerald</td>
-                            <td>Fiction</td>
+                            <td>Ficción</td>
                             <td>5</td>
                         </tr>
                         <tr>
                             <td>To Kill a Mockingbird</td>
                             <td>Harper Lee</td>
-                            <td>Fiction</td>
+                            <td>Ficción</td>
                             <td>3</td>
                         </tr>
                         <tr>
                             <td>1984</td>
                             <td>George Orwell</td>
-                            <td>Science Fiction</td>
+                            <td>Ciencia Ficción</td>
                             <td>7</td>
                         </tr>
                     </tbody>
