--- a/project/help.html
+++ b/project/help.html
@@ -23,17 +23,37 @@
     </header>
     <main>
         <div class="contenedor">
-            <section class="seccion-izquierda">
+            <!-- Título e Instrucciones -->
+            <section class="contact-header">
                 <h2>Contact Us</h2>
                 <p>For any questions or assistance, you can reach us through the following channels:</p>
             </section>
-            <section class="seccion-derecha">
+
+            <!-- Medios de Contacto -->
+            <section class="contact-center">
                 <ul class="contact-info">
-                    <li><a href="https://www.facebook.com/zumpango" target="_blank">Facebook</a></li>
-                    <li><a href="https://wa.me/1234567890" target="_blank">WhatsApp</a></li>
-                    <li><a href="https://www.instagram.com/zumpango" target="_blank">Instagram</a></li>
-                    <li><a href="mailto:info@zumpango.org">Email</a></li>
+                    <li><a href="https://www.facebook.com/zumpango" target="_blank"><img src="images/facebook-icon.png" alt="Facebook"> Facebook</a></li>
+                    <li><a href="https://wa.me/1234567890" target="_blank"><img src="images/whatsapp-icon.png" alt="WhatsApp"> WhatsApp</a></li>
+                    <li><a href="https://www.instagram.com/zumpango" target="_blank"><img src="images/instagram-icon.png" alt="Instagram"> Instagram</a></li>
+                    <li><a href="mailto:info@zumpango.org"><img src="images/email-icon.png" alt="Email"> Email</a></li>
                 </ul>
+            </section>
+
+            <!-- Formulario de Contacto -->
+            <section class="contact-form">
+                <h3>Send Us a Message</h3>
+                <form action="mailto:info@zumpango.org" method="post" enctype="text/plain">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Your name" required>
+
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Your email" required>
+
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" placeholder="Write your message here..." required></textarea>
+
+                    <button type="submit">Send</button>
+                </form>
             </section>
         </div>
     </main>
